fixed spacing issue

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -35,7 +35,7 @@ h6 {
 }
 
 h2 {
-    margin-top: -40px;
+    margin-top: 100px;
 }
 
 p {
